# mock-trader

./: .dockerignore  .env.example  .gitignore  ANTIGRAVITY.md  README.md  SPEC.md  commands.txt  config.py  db.py  features_compute.py  fetcher.py  main.py  monitor.py  pyproject.toml  register_trader.py  requirements.txt  run.sh  schema.sql  status.py  trader.py
.agent/rules/: ARCHITECTURE.md  CODE.md
.agent/workflows/: contribution.md  quality-check.md
data/models/xgboost_v1/: metadata.json
db/: docker-compose.yaml
deploy/: .env.example  Dockerfile  README.md  docker-compose.yaml
scripts/: main.py  register_trader.py  status.py
src/: config.py  db.py  features.py  fetcher.py  logging_config.py  monitor.py  trader.py
tests/: test_placeholder.py
